# velos

./: .gitignore  Cargo.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmarks/: baseline.json
crates/velos-api/: Cargo.toml
crates/velos-core/: Cargo.toml
crates/velos-gpu/: Cargo.toml
crates/velos-gpu/benches/: dispatch.rs
crates/velos-gpu/shaders/: agent_render.wgsl  agent_update.wgsl  building_3d.wgsl  fixed_point.wgsl  ground_plane.wgsl  pedestrian_adaptive.wgsl  perception.wgsl  road_line.wgsl  terrain.wgsl  wave_front.wgsl
crates/velos-gpu/src/: app.rs  app_egui.rs  buffers.rs  building_geometry.rs  camera.rs  compute.rs  compute_tests.rs  compute_wave_front.rs  device.rs  error.rs  lib.rs  lighting.rs  lod.rs  main.rs  ped_adaptive.rs  perception.rs  renderer.rs  renderer3d.rs  sim.rs  sim_bus.rs  sim_calibration.rs  sim_helpers.rs  sim_junction.rs  sim_lifecycle.rs  sim_mobil.rs  sim_perception.rs  sim_render.rs  sim_reroute.rs  sim_signals.rs  sim_snapshot.rs  sim_vehicles.rs  terrain.rs
crates/velos-gpu/tests/: boundary_protocol_tests.rs  cf_model_switch.rs  gpu_params_tests.rs  gpu_physics.rs  gpu_round_trip.rs  gpu_vehicle_params.rs  integration_bus_dwell.rs  integration_emergency_wiring.rs  integration_frame_pipeline.rs  integration_startup.rs  lane_change_integration.rs  motorbike_lateral_filter.rs  pedestrian_adaptive_tests.rs  render_tests.rs  wave_front_validation.rs
data/gtfs/: routes.txt  (+3 more)
(+105 files in other folders)
